[package]
name = "gameplay"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../build.rs"

[features]
null_check = []
safety_check = []

[dependencies]
sound-traits.workspace = true
sound.workspace = true
wad.workspace = true
glam.workspace = true
log.workspace = true
