[package]
name = "input"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[features]
sdl2-input = ["sdl2", "gameplay"]
dummy-input = []

[dependencies]
nanoserde.workspace = true
sdl2 = {workspace = true, optional = true }
gameplay = { workspace = true, optional = true }
