[package]
name = "render-target"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[features]
safety_check = []

[dependencies]
gameplay.workspace = true
golem.workspace = true
sdl2.workspace = true
nanoserde.workspace = true
